Move to BungeeGit egg